log/build_2023-09-15_23-41-27/hw1_py_pubsub/stdout_stderr.log
running egg_info
creating ../../build/hw1_py_pubsub/hw1_py_pubsub.egg-info
writing ../../build/hw1_py_pubsub/hw1_py_pubsub.egg-info/PKG-INFO
writing dependency_links to ../../build/hw1_py_pubsub/hw1_py_pubsub.egg-info/dependency_links.txt
writing entry points to ../../build/hw1_py_pubsub/hw1_py_pubsub.egg-info/entry_points.txt
writing requirements to ../../build/hw1_py_pubsub/hw1_py_pubsub.egg-info/requires.txt
writing top-level names to ../../build/hw1_py_pubsub/hw1_py_pubsub.egg-info/top_level.txt
writing manifest file '../../build/hw1_py_pubsub/hw1_py_pubsub.egg-info/SOURCES.txt'
reading manifest file '../../build/hw1_py_pubsub/hw1_py_pubsub.egg-info/SOURCES.txt'
writing manifest file '../../build/hw1_py_pubsub/hw1_py_pubsub.egg-info/SOURCES.txt'
running build
running build_py
creating /home/srooney/Documents/rbe500/hw1/build/hw1_py_pubsub/build
creating /home/srooney/Documents/rbe500/hw1/build/hw1_py_pubsub/build/lib
creating /home/srooney/Documents/rbe500/hw1/build/hw1_py_pubsub/build/lib/hw1_py_pubsub
copying hw1_py_pubsub/rooney_subscriber.py -> /home/srooney/Documents/rbe500/hw1/build/hw1_py_pubsub/build/lib/hw1_py_pubsub
copying hw1_py_pubsub/__init__.py -> /home/srooney/Documents/rbe500/hw1/build/hw1_py_pubsub/build/lib/hw1_py_pubsub
copying hw1_py_pubsub/rooney_publisher.py -> /home/srooney/Documents/rbe500/hw1/build/hw1_py_pubsub/build/lib/hw1_py_pubsub
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install
running install_lib
creating /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/python3.10/site-packages/hw1_py_pubsub
copying /home/srooney/Documents/rbe500/hw1/build/hw1_py_pubsub/build/lib/hw1_py_pubsub/rooney_subscriber.py -> /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/python3.10/site-packages/hw1_py_pubsub
copying /home/srooney/Documents/rbe500/hw1/build/hw1_py_pubsub/build/lib/hw1_py_pubsub/__init__.py -> /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/python3.10/site-packages/hw1_py_pubsub
copying /home/srooney/Documents/rbe500/hw1/build/hw1_py_pubsub/build/lib/hw1_py_pubsub/rooney_publisher.py -> /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/python3.10/site-packages/hw1_py_pubsub
byte-compiling /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/python3.10/site-packages/hw1_py_pubsub/rooney_subscriber.py to rooney_subscriber.cpython-310.pyc
byte-compiling /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/python3.10/site-packages/hw1_py_pubsub/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/python3.10/site-packages/hw1_py_pubsub/rooney_publisher.py to rooney_publisher.cpython-310.pyc
running install_data
  File "/home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/python3.10/site-packages/hw1_py_pubsub/rooney_publisher.py", line 24
    def main(args=None)
                       ^
SyntaxError: expected ':'

creating /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/share/ament_index
creating /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/share/ament_index/resource_index
creating /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/share/ament_index/resource_index/packages
copying resource/hw1_py_pubsub -> /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/share/ament_index/resource_index/packages
copying package.xml -> /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/share/hw1_py_pubsub
running install_egg_info
Copying ../../build/hw1_py_pubsub/hw1_py_pubsub.egg-info to /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/python3.10/site-packages/hw1_py_pubsub-0.0.0-py3.10.egg-info
running install_scripts
Installing listener script to /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/hw1_py_pubsub
Installing talker script to /home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/hw1_py_pubsub
writing list of installed files to '/home/srooney/Documents/rbe500/hw1/build/hw1_py_pubsub/install.log'
